Fixing z-index of dropdown content
Changed css class img to image to fix the z index of dropdown content.

--- a/style2.css
+++ b/style2.css
@@ -47,16 +47,18 @@
 	   	margin-top:50px;
 	    padding-top:8px;
 	    padding-bottom:8px;
+	    z-index: -1;
 	}
-	
-	/*img #logo{
+	/*
+	img #logo{
 		width:100px;
 		height:100px;
 		/*background-color:white;
 		float:left;
 		margin-right:40px;
 	
-	}*/
+	}
+	*/
 	
 	ul#menu {
 		list-style-type: none;
@@ -91,10 +93,12 @@
 }
 
 
-	img {
+	.image {
+		position: relative; 
 		width:200px;
 		height:200px;
 		border: 0;
+		z-index: -1;
 	}
 	
 	.servico, .app{
@@ -128,16 +132,15 @@
 	    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	    padding: 12px 16px;
 	    font-size:80%;
+	    z-index: 2;
 	}
 	
 	.app:hover .dropdown-content {
 		text-align: left;
 	    display: block;
+	    position: absolute;
 	    color: black;
-	}
-
-	h3{
-		float:left;
+	   	z-index: 2;
 	}
 
 	#logo{
@@ -145,4 +148,3 @@
 		height: 35px;
 		padding-right: 20px;
 	}
-
